--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "LINKIO",
-  "version": "0.1.0",
+  "name": "linkio",
+  "version": "1.0.0",
   "private": true,
+  "description": "Enterprise-grade link shortening platform with advanced security and scalability",
+  "author": "Your Name",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma db push --force-reset",
+    "docker:build": "docker build -t linkio .",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose down"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.4",
+    "@auth/prisma-adapter": "^2.0.0",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -41,6 +51,8 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.40.1",
+    "@upstash/redis": "^1.36.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -48,10 +60,14 @@
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.10",
     "input-otp": "^1.2.4",
+    "ioredis": "^5.3.2",
     "lucide-react": "^0.383.0",
     "mini-svg-data-uri": "^1.4.4",
+    "nanoid": "^5.0.7",
     "next": "14.2.13",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -64,10 +80,13 @@
     "unique-names-generator": "^4.7.1",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
