--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^8.7.0",
     "@tanstack/react-query": "^5.40.1",
     "@upstash/redis": "^1.36.1",
     "bcryptjs": "^2.4.3",
@@ -74,6 +75,7 @@
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
     "sonner": "^1.4.41",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
