Fix Vercel build: Move prisma generate to build script, add vercel.json, remove package-lock.json

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Your Name",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
+    "postinstall": "echo 'Prisma generate will run during build'",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
