Fix Vercel build: Ignore ESLint errors during build, ensure pnpm usage

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Enterprise-grade link shortening platform with advanced security and scalability",
   "author": "Your Name",
+  "packageManager": "pnpm@10.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
